--- a/public/views/partials/login-form.hbs
+++ b/public/views/partials/login-form.hbs
@@ -12,9 +12,13 @@
     <h1>LOGIN</h1>
         {{> components/form/input type='email' name='email' placeholder='email' req=true}}
         {{> components/form/input type='password' name='password' placeholder='password' req=true}}
-        <div class="flex mt-1 justify-around w-full">
+        <div class="flex mt-4 justify-around w-full">
             {{> components/button title='login' type='submit' id="login-button"}}
             {{> components/button title='register' id="login-to-register"}}
         </div>
     </form>
 </div>
+<script src="https://unpkg.com/validator@latest/validator.min.js"></script>
+<script src="/js/decorators.js" type="module" ></script>
+<script src="/js/utils.js" type="module" ></script>
+<script src="/js/login.js" type="module" ></script>
