--- a/public/views/partials/register-form.hbs
+++ b/public/views/partials/register-form.hbs
@@ -2,25 +2,31 @@
     <form action="" id="register-form" method="post" class="
         flex-col 
         bg-slate-300
-        w-fit
+        w-3/5
         rounded
         flex
         items-center
         min-h-46
         p-5
     ">
-    <h1>Register</h1>
+        <h1>Register</h1>
         {{> components/form/input type='text' name='name' placeholder='name' req=true}}
         {{> components/form/input type='text' name='username' placeholder='username' req=true}}
         {{> components/form/input type='email' name='email' placeholder='email' req=true}}
-        {{> components/form/input type='text' name='celphone' placeholder='celphone' req=true pattern="/^(\+55|55)?(\d{2})?(\d{2})(\d{4,5})(\d{4})$/" }} 
+        {{> components/form/input type='text' name='cellphone' placeholder='cellphone' req=true pattern="/^(\+55|55)?(\d{2})?(\d{2})(\d{4,5})(\d{4})$/" }} 
         {{> components/form/input type='password' name='password' placeholder='password' req=true}}
         {{> components/form/input type='password' name='passwordconf' req=true placeholder='password confirmation'}}
-        {{> components/form/input type='date' name='bithdate' req=true placeholder='bithdate'}}
-        <div class="flex mt-1 justify-around w-full">
+        {{> components/form/input type='date' name='birthdate' req=true placeholder='birthdate'}}
+        <div class="flex mt-4 justify-around w-full">
             {{> components/button title='register' type=true id="register-button"}}
             {{> components/button title='login' id="register-to-login"}}    
         </div>
-        
+        <ul id="register-form-errors" class="errors-list list-disc hidden text-sm flex-col flex items-start w-full mt-1 text-red-600">
+            
+        </ul>
     </form>
 </div>
+<script src="https://unpkg.com/validator@latest/validator.min.js"></script>
+<script src="/js/decorators.js" type="module" ></script>
+<script src="/js/utils.js" type="module" ></script>
+<script src="/js/register.js" type="module" ></script>
