tESTE REGISTER FROM FRONT END

--- a/public/views/partials/login-form.hbs
+++ b/public/views/partials/login-form.hbs
@@ -8,6 +8,7 @@
         items-center
         min-h-46
         p-5
+        animate-translate-y
     ">
     <h1>LOGIN</h1>
         {{> components/form/input type='email' name='email' placeholder='email' req=true}}
