--- a/public/views/partials/register-form.hbs
+++ b/public/views/partials/register-form.hbs
@@ -8,15 +8,22 @@
         items-center
         min-h-46
         p-5
+        animate-translate-y
     ">
         <h1>Register</h1>
         {{> components/form/input type='text' name='name' placeholder='name' req=true}}
-        {{> components/form/input type='text' name='username' placeholder='username' req=true}}
+        {{> components/form/input type='text' name='nickname' placeholder='nickname' req=true}}
         {{> components/form/input type='email' name='email' placeholder='email' req=true}}
         {{> components/form/input type='text' name='cellphone' placeholder='cellphone' req=true pattern="/^(\+55|55)?(\d{2})?(\d{2})(\d{4,5})(\d{4})$/" }} 
         {{> components/form/input type='password' name='password' placeholder='password' req=true}}
         {{> components/form/input type='password' name='passwordconf' req=true placeholder='password confirmation'}}
         {{> components/form/input type='date' name='birthdate' req=true placeholder='birthdate'}}
+        <div class="flex mt-4 justify-around w-full">
+            <select name="userType" id="selectUserType">
+                <option value="personal">Personal</option>
+                <option value="aluno">Aluno</option>
+            </select>
+        </div>
         <div class="flex mt-4 justify-around w-full">
             {{> components/button title='register' type=true id="register-button"}}
             {{> components/button title='login' id="register-to-login"}}    
