--- a/public/views/partials/components/button.hbs
+++ b/public/views/partials/components/button.hbs
@@ -8,6 +8,9 @@
     h-8
     duration-300
     active:scale-110
+    flex
+    items-center
+    justify-center
 "
 {{#if type }}
     type="submit"
