--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -1,4 +1,8 @@
-<div id="register-container">
+<div class="flex items-center animate-translate-y mb-4 justify-center w-full hidden rounded bg-green-100 p-2" id="message-container">
+    
+</div>
+
+<div id="register-container" class="">
     {{> register-form}}
 </div>
 <div id="login-container" class="hidden">
