auth and relate muscle to articulation and movement

--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -1,5 +1,2 @@
-{{!-- {{> workouts}} --}}
-{{!-- {{> alunos}} --}}
-{{!-- {{> personal}} --}}
-
-<h1>LOGGED</h1>
+<input type="hidden" name="accessToken" id="accessToken" value="{{ accessToken }}">
+<input type="hidden" name="refreshToken" id="refreshToken" value="{{ refreshToken }}">
