--- a/public/views/partials/components/form/input.hbs
+++ b/public/views/partials/components/form/input.hbs
@@ -5,6 +5,9 @@
     {{#if id}}
         id="{{id}}"
     {{/if}}
+    {{#if value}}
+        value="{{ value }}"
+    {{/if}}
     {{#if pattern}}
         pattern={{ pattern }}
     {{/if}}
@@ -16,4 +19,5 @@
         p-1
         m-1
         rounded
+        text-black
     ">
