--- a/public/views/exercises/index.hbs
+++ b/public/views/exercises/index.hbs
@@ -1,7 +1,12 @@
 <h1>Relate portions with movements and articulations</h1>
 
-<form action="http://localhost:4567/articulation-movements" method="post" id="relate-portions">
-    <select name="portion" class="text-black cursor-pointer">
+<form 
+    action="http://localhost:4567/articulation-movements" 
+    method="post" 
+    id="relate-portions"
+    class="bg-red-700 p-5 flex  justify-center flex-col"
+>
+    <select name="portionId" class="text-black cursor-pointer m-1">
     {{#each muscleGroups}}
         <optgroup label="{{this.name}}" class="text-black">
         {{#each this.musclePortions}}
@@ -11,31 +16,72 @@
     {{/each}}
     </select>
 
-    <select name="articulation-movement" class="text-black cursor-pointer">
+    <select name="articulation_movement" class="text-black cursor-pointer m-1">
     {{#each articulations}}
         <optgroup label="{{this.name}}" class="text-black">
         {{#each this.movements}}
-            <option class="cursor-pointer" value="{{this.id}}-{{../this.id}}">{{this.name}}</option>
+            <option class="cursor-pointer" value="{{this.id}}-{{../this.id}}">{{this.name}} - {{../this.name}}</option>
         {{/each}}
         </optgroup>
     {{/each}}
     </select>
-    <button>send</button>
+    <select name="role" id="relate-portions-role" class="text-black m-1">
+        <option value="agonist">Agonist</option>
+        <option value="synergist">Synergist</option>
+        <option value="antagonist">Antagonist</option>
+    </select>
+    {{> components/button id="relate-portions-button" title="send"}}
 </form>
 
-<script>
+<script src="/js/form/utils.js" type="module"></script>
+<script src="/js/utils.js" type="module"></script>
+<script type="module">
+    import { serializeForm } from '/js/form/utils.js'
+    import { BASEPATH, CONTENT_TYPES, contentType } from '/js/utils.js'
     const form = document.getElementById('relate-portions');
-    const [muscles, articulationMovement] = [...form.getElementsByTagName('select')];
-    form.onsubmit = function(e) {
-        e.preventDefault()
-        const portionId = Number(muscles.value) 
-        const [movementId, articulationId] = articulationMovement.value.split('-').map(Number)
+    
+    form.onsubmit = async function(e) {
+        e.preventDefault();
+
+        const {
+            articulation_movement,
+            portionId,
+            role
+        } = serializeForm(this);
+
+        const [
+            movementId, 
+            articulationId
+        ] = articulation_movement.split('-').map(Number);
 
         const body = {
-            portionId, articulationId, movementId
+            movementId,
+            articulationId,
+            portionId: Number(portionId),
+            role
         }
 
         console.log({body})
+
+        const url = BASEPATH() + "exercise/articulation-movements"
+
+        const request = await fetch(url, {
+            method: 'POST',
+            body: JSON.stringify(body),
+            headers: {
+                ...contentType('JSON')
+            }
+        }) 
+
+        const response = await request.text()
+
+
+        if(request.status !== 201) {
+            console.log(request.status)
+            window.location.reload()
+        }
+        
+        console.log({response}, request.status)
     }
 </script>
 
