--- a/public/views/partials/components/menu/nav-bar.hbs
+++ b/public/views/partials/components/menu/nav-bar.hbs
@@ -8,6 +8,7 @@
             {{> components/menu/li title='Home' link='/home' icon='home' classes="my-2"}}
             {{> components/menu/li title='Schedule' icon='schedule' classes="my-2"}}
             {{> components/menu/li title='Workouts' icon='dumbell' classes="my-2"}}
+            {{> components/menu/li title='Muscles' link='/muscle' icon='skeleton' classes="my-2"}}
             {{> components/menu/li title='Exercises' link='/exercise' icon='yoga' classes="my-2"}}
             {{> components/menu/li title='Personal' icon='personal' classes="my-2"}}
             {{> components/menu/li title='Costumers' icon='peaple-group' classes="my-2"}}
