--- a/public/views/layouts/default.hbs
+++ b/public/views/layouts/default.hbs
@@ -25,8 +25,8 @@
   <body>
     <div class="container-main bg-black text-white">
     	{{> header }}
-      	<main>
-    		{{#if message}}
+      	<main class="select-none">
+    		  {{#if message}}
           		{{> components/message message=message bg=bg}}
         	{{/if}}
         	{{#unless message}}
