--- a/public/views/muscles/index.hbs
+++ b/public/views/muscles/index.hbs
@@ -1,3 +1,17 @@
-<div class="flex flex-col w-100 h-100">
-    
+<div class="flex flex-col w-100 h-100 px-2 z-20">
+    {{#each muscles}}
+        {{#dropDown this.name "p-2 m-1 hover:translate-y-0.5 bg-red-700 duration-100 rounded" }}
+            {{#each this.musclePortions}}
+                <div class="p-1" id="{{this.id}}-portion" data-muscle-portion="true">
+                    {{> components/link link=(concat "http://localhost:4567/muscles/" this.id) classes="translate-y-0.5 hover:text-red-900"  title=this.name }}    
+                </div>
+            {{/each}}
+        {{/dropDown }}
+    {{/each}}     
 </div>
+
+<script src="/js/drop-down.js" type="module"></script>
+<script type="module">
+   import { setDropEvents } from '/js/drop-down.js';
+   setDropEvents();
+</script>
