--- a/public/views/partials/components/menu/nav-bar.hbs
+++ b/public/views/partials/components/menu/nav-bar.hbs
@@ -1,4 +1,4 @@
-<nav class="fixed top-0 left-0 flex p-1">
+<nav class="fixed top-0 left-0 flex p-1 z-10">
     <div class="bg-red-700 text-white p-2 rounded-md flex-col">
         <div class="flex items-center justify-center">
             <img src="/images/icons/hamburguer.svg" id="menu-hamburguer" alt="dumbell" class="w-10 h-10 flex cursor-pointer items-center justify-center">
@@ -7,11 +7,12 @@
         <ul class="hidden" id="list-menu">
             {{> components/menu/li title='Home' link='/home' icon='home' classes="my-2"}}
             {{> components/menu/li title='Schedule' icon='schedule' classes="my-2"}}
-            {{> components/menu/li title='Workouts' icon='dumbell' classes="my-2"}}
-            {{> components/menu/li title='Muscles' link='/muscle' icon='skeleton' classes="my-2"}}
+            {{> components/menu/li title='Workouts' link="/workouts" icon='dumbell' classes="my-2"}}
+            {{> components/menu/li title='Muscles' link='/muscles' icon='skeleton' classes="my-2"}}
             {{> components/menu/li title='Exercises' link='/exercise' icon='yoga' classes="my-2"}}
             {{> components/menu/li title='Personal' icon='personal' classes="my-2"}}
             {{> components/menu/li title='Costumers' icon='peaple-group' classes="my-2"}}
+            {{> components/menu/li title='Measures' icon='balança' classes="my-2"}}
             {{> components/menu/li title='Settings' icon='settings' classes="my-2"}}
         </ul>
     </div>
