--- a/public/views/workouts/index.hbs
+++ b/public/views/workouts/index.hbs
@@ -1,9 +1,11 @@
 <div class="flex flex-col">
     <h1>Workouts</h1>
+    
     <div>
-        {{> components/button-link title='CREATE'}}
+        <h1>My workouts</h1>
     </div>
+    
     <div>
-        {{> components/button-link title='LIST'}}
+        <h1>Create workout</h1>
     </div>
 </div>
