--- a/public/views/muscles/portion-detail.hbs
+++ b/public/views/muscles/portion-detail.hbs
@@ -1,6 +1,6 @@
 <div class="p-2 flex flex-col">
     <h1>{{ capitalizeFirstLetter portion.name }}</h1>
-    {{#dropDown "Muscle Group" "p-2 m-1 hover:translate-y-0.5 bg-red-700 duration-100 rounded"}}
+    {{#dropDown "muscle-group-container" "Muscle Group" "p-2 m-1 hover:translate-y-0.5 bg-red-700 duration-100 rounded"}}
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam esse vel nihil expedita repudiandae sequi quas. Delectus officia, iusto repellendus cupiditate id magni temporibus magnam autem accusamus deleniti, sequi soluta.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem necessitatibus aliquid eius, ad placeat sed ratione aliquam eos temporibus architecto ea fugiat, repellat unde atque veniam nihil, culpa corporis omnis?
@@ -8,21 +8,21 @@
         </p>
         
     {{/dropDown }}
-    {{#dropDown "Exercises" "p-2 m-1 hover:translate-y-0.5 bg-red-700 duration-100 rounded"}}
+    {{#dropDown "exercises-container" "Exercises" "p-2 m-1 hover:translate-y-0.5 bg-red-700 duration-100 rounded"}}
         <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam esse vel nihil expedita repudiandae sequi quas. Delectus officia, iusto repellendus cupiditate id magni temporibus magnam autem accusamus deleniti, sequi soluta.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem necessitatibus aliquid eius, ad placeat sed ratione aliquam eos temporibus architecto ea fugiat, repellat unde atque veniam nihil, culpa corporis omnis?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis minus fuga voluptatum. Iure commodi hic fugiat quas quaerat facilis exercitationem rerum! Modi explicabo, quasi quidem reiciendis maiores amet blanditiis libero.
         </p>
     {{/dropDown }}  
-    {{#dropDown "Articulations and movements" "p-2 m-1 hover:translate-y-0.5 bg-red-700 duration-100 rounded"}}
+    {{#dropDown "articulations-movements-container" "Articulations and movements" "p-2 m-1 hover:translate-y-0.5 bg-red-700 duration-100 rounded"}}
         <div class="flex items-center justify-around">
         {{#each articulationsMovements}} 
-        <div class="flex flex-col p-3">
+        <div class="flex flex-col p-3" data-drop-down-allow-close="true">
             <h3>{{ this.name }} </h3>
-            <ul class="list-disc">
+            <ul class="list-disc" data-drop-down-allow-close="true">
              {{#each this.muscleMovements}}  
-                <li>{{ this.name }}</li>
+                <li data-drop-down-allow-close="true">{{ this.name }}</li>
              {{/each}}  
             </ul>
         </div>
@@ -33,6 +33,5 @@
 </div>
 <script src="/js/drop-down.js" type="module"></script>
 <script type="module">
-    import { setDropEvents } from '/js/drop-down.js';
-    setDropEvents()
+    
 </script>
