--- a/public/views/partials/components/exercises/create.hbs
+++ b/public/views/partials/components/exercises/create.hbs
@@ -1,8 +1,4 @@
 <form action="" class="flex flex-col text-black">
-    {{> components/form/input type='text' name='name' placeholder="Exercise name"}}
-    <select name="hello[]" id="" multiple="true">
-        {{#each portions}}
-            <option value={{this.id}}>{{this.name}}</option>
-        {{/each}}
-    </select>
+    {{> components/form/input type='text' name='name' placeholder="Name"}}
+    {{> components/form/text-area type='text-area' name="descricao" placeholder="Description"}}
 </form>
