drop down finished

--- a/public/views/exercises/index.hbs
+++ b/public/views/exercises/index.hbs
@@ -1,10 +1,14 @@
-<div class="flex flex-col select-none p-2">
-    {{#dropDown "my-exercises-container" "My exercises" "bg-red-700 mb-1 p-2 rounded "}}
+<div class="flex flex-col items-center select-none p-2">
+    <div class="flex flex-col w-2/5">
+    {{#dropDown "my-exercises-container" "My exercises" "p-2 m-1 border hover:shadow-2xl hover:shadow-red-950 hover:scale-95 border-red-900 duration-100 rounded"}}
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium mollitia reiciendis, atque ad temporibus tempore perferendis. Ratione blanditiis debitis quasi molestias et dolorem? Facere aspernatur similique architecto quisquam alias consequatur!
     {{/dropDown}}
 
-    {{#dropDown "create-exercises-container" "Create exercise" "bg-red-700 mb-1 p-2 rounded "}}
+    {{#dropDown "create-exercises-container" "Create exercise" "p-2 m-1 border hover:shadow-2xl hover:shadow-red-950 hover:scale-95 border-red-900 duration-100 rounded"}}
         {{> components/exercises/create portions=portions}}
     {{/dropDown}}
+    </div>
+    
 </div>
+<script src="/js/drop-down.js" type='module'></script>
 
