--- a/public/views/partials/components/button.hbs
+++ b/public/views/partials/components/button.hbs
@@ -1,5 +1,4 @@
-<button class="
-    bg-black 
+<button class=" 
     text-white 
     min-w-fit 
     w-24 
@@ -11,6 +10,7 @@
     flex
     items-center
     justify-center
+    {{classes}}
 "
 {{#if type }}
     type="submit"
