--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,15 +1,3 @@
-@keyframes translate-y {
-    0% {
-        transform: translateY(-10px);
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
-  
-.animate-translate-y {
-    animation-name: translate-y;
-    animation-duration: 500ms;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
