--- a/public/views/layouts/logged-default.hbs
+++ b/public/views/layouts/logged-default.hbs
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <title>App</title>
   </head>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/styles/animations.css">
+  <link rel="stylesheet" href="/styles/global.build.css">
   <link rel="stylesheet" href="/styles/global.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
   <style>
@@ -40,4 +41,6 @@
     </div>
   </body>
   <script src="/js/icons/animation.js"></script>
+  <script src="/js/utils.js" type="module"></script>
+  <script src="/js/menu.js" type="module"></script>
 </html>
