--- a/public/views/partials/components/form/text-area.hbs
+++ b/public/views/partials/components/form/text-area.hbs
@@ -17,10 +17,9 @@
     {{/if}}
     class="
         focus:outline-none
-        p-1
-        m-1
         rounded
         text-black
         {{ classes }}
     ">
+    {{ value }}
     </textarea>
