--- a/public/views/partials/register-form.hbs
+++ b/public/views/partials/register-form.hbs
@@ -7,7 +7,7 @@
         border
         border-red-950
         hover:shadow-2xl
-        hover:shadow-red-800
+        hover:shadow-red-950
         duration-100
         flex
         p-5
@@ -16,14 +16,14 @@
         animate-translate-y
     ">
         <h1>Register</h1>
-        {{> components/form/input type='text' name='name' placeholder='name' req=true}}
-        {{> components/form/input type='text' name='nickname' placeholder='nickname' req=true}}
-        {{> components/form/input type='email' name='email' placeholder='email' req=true}}
-        {{> components/form/input type='text' name='cellphone' placeholder='cellphone' req=true pattern="/^(\+55|55)?(\d{2})?(\d{2})(\d{4,5})(\d{4})$/" }} 
-        {{> components/form/input type='password' name='password' placeholder='password' req=true}}
-        {{> components/form/input type='password' name='passwordconf' req=true placeholder='password confirmation'}}
-        {{> components/form/input type='date' name='birthdate' req=true placeholder='birthdate'}}
-        <div class="flex mt-4 justify-around w-full text-black">
+        {{> components/form/input classes="p-1 m-1" type='text' name='name' placeholder='name' req=true}}
+        {{> components/form/input classes="p-1 m-1" type='text' name='nickname' placeholder='nickname' req=true}}
+        {{> components/form/input classes="p-1 m-1" type='email' name='email' placeholder='email' req=true}}
+        {{> components/form/input classes="p-1 m-1" type='text' name='cellphone' placeholder='cellphone' req=true pattern="/^(\+55|55)?(\d{2})?(\d{2})(\d{4,5})(\d{4})$/" }} 
+        {{> components/form/input classes="p-1 m-1" type='password' name='password' placeholder='password' req=true}}
+        {{> components/form/input classes="p-1 m-1" type='password' name='passwordconf' req=true placeholder='password confirmation'}}
+        {{> components/form/input classes="p-1 m-1" type='date' name='birthdate' req=true placeholder='birthdate'}}
+        <div class="flex mt-4 justify-around w-full text-black p-1 m-1">
             <select name="userType" id="selectUserType">
                 <option value="personal">Personal</option>
                 <option value="aluno">Aluno</option>
