--- a/public/views/layouts/default.hbs
+++ b/public/views/layouts/default.hbs
@@ -5,8 +5,7 @@
     <title>App</title>
   </head>
   <link rel="stylesheet" href="/styles/animations.css">
-  <link rel="stylesheet" href="/styles/global.build.css">
-  <link rel="stylesheet" href="/styles/global.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
   <style>
     body{
