--- a/public/views/muscles/index.hbs
+++ b/public/views/muscles/index.hbs
@@ -1,7 +1,7 @@
 <div class="flex flex-col w-100 h-100 px-2 z-20 items-center">
     <div class="w-2/5 flex flex-col">
     {{#each muscles}}
-        {{#dropDown (concat this.id "-container") this.name "p-2 border hover-scale-99 m-1 hover:shadow-2xl hover:shadow-red-800 border-red-900 duration-100 rounded" }}
+        {{#dropDown (concat this.id "-container") this.name "p-1 mb-1 bg-red-950 border-red-950" true }}
             {{#each this.musclePortions}}
                 <div class="p-1" id="{{this.id}}-portion" data-muscle-portion="true" data-drop-down-allow-close="true">
                     {{> components/link link=(concat "http://localhost:4567/muscles/" this.id) classes="hover:text-red-900 decoration-1 duration-75 w-full"  title=this.name }}    
