--- a/public/views/partials/components/form/text-area.hbs
+++ b/public/views/partials/components/form/text-area.hbs
@@ -19,6 +19,7 @@
         focus:outline-none
         rounded
         text-black
+        caret-gray-400
         {{ classes }}
     ">
     {{ value }}
