--- a/public/views/exercises/index.hbs
+++ b/public/views/exercises/index.hbs
@@ -1,10 +1,10 @@
 <div class="flex flex-col items-center select-none p-2">
     <div class="flex flex-col w-4/5">
-    {{#dropDown "my-exercises-container" "List" "p-2 m-1 border hover:shadow-2xl hover:shadow-red-950 border-red-900 duration-100 rounded"}}
+    {{#dropDown "my-exercises-container" "List" "p-1 mb-1 bg-red-950 border-red-950" true}}
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium mollitia reiciendis, atque ad temporibus tempore perferendis. Ratione blanditiis debitis quasi molestias et dolorem? Facere aspernatur similique architecto quisquam alias consequatur!
     {{/dropDown}}
 
-    {{#dropDown "create-exercises-container" "New" "p-2 m-1 border hover:shadow-2xl hover:shadow-red-950 border-red-900 duration-100 rounded"}}
+    {{#dropDown "create-exercises-container" "New" "p-1 mb-1 bg-red-950 border-red-950" true}}
         {{> components/exercises/create muscles=muscles}}
     {{/dropDown}}
     </div>
