--- a/public/views/partials/components/drop-down.hbs
+++ b/public/views/partials/components/drop-down.hbs
@@ -1,5 +1,11 @@
 <div id='{{id}}' 
-    class="{{ classes }} select-none hover:cursor-pointer h-fit" 
+    class="
+    {{#if default}}
+      hover:shadow-2xl bg-opacity-70 border hover:shadow-black duration-300 rounded
+    {{/if}}
+    {{ classes }} 
+    select-none hover:cursor-pointer h-fit
+    " 
     data-drop-container="true"
     data-drop-down-allow-close="true"
   >
@@ -7,7 +13,7 @@
     <h2 data-drop-down-allow-close="true" class="text-xl text-center w-full self-center m-1">{{ title }}</h2>
     <img src="/images/icons/drop-down.svg" class="app-icon hover:scale-150 drop-down-icon ease-in duration-100" data-drop-down-allow-close="true">
   </div>
-  <div class="overflow-hidden flex flex-col ease-in duration-100 hidden " data-drop-down="true" data-drop-down-allow-close="true">
+  <div class="overflow-hidden flex flex-col ease-in duration-500 ease-out h-0 -translate-y opacity-0" data-drop-down="true" data-drop-down-allow-close="true">
     {{ content }}
   </div>
 </div>
