--- a/public/views/partials/register-form.hbs
+++ b/public/views/partials/register-form.hbs
@@ -4,11 +4,9 @@
         w-2/5
         rounded
         bg-black
-        border
-        border-red-950
         hover:shadow-2xl
         hover:shadow-red-950
-        duration-100
+        duration-300
         flex
         p-5
         items-center
@@ -30,8 +28,8 @@
             </select>
         </div>
         <div class="flex mt-4 justify-around w-full">
-            {{> components/button title='register' classes="border border-red-950 hover:bg-red-950 duration-75" type=true id="register-button"}}
-            {{> components/button title='login' classes="border border-red-950 hover:bg-red-950 duration-75" id="register-to-login"}}    
+            {{> components/button title='register' classes="bg-red-950 duration-75 hover:scale-105" type=true id="register-button"}}
+            {{> components/button title='login' classes="bg-red-950 duration-75 hover:scale-105" id="register-to-login"}}    
         </div>
         {{> components/loading-modal id="register-spin"}}
 
